UPDATE: pwa 지원 및 앱 설치 버튼 추가

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "react-hot-toast": "^2.4.1",
     "react-swipeable-bottom-sheet": "^1.1.2",
     "recoil": "^0.7.7"
+  },
+  "devDependencies": {
+    "next-pwa": "^5.6.0"
   }
 }
