--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material/web": "^1.0.1",
     "@reacticons/ionicons": "^7.1.0",
+    "@supabase/supabase-js": "^2.39.1",
     "hls.js": "^1.4.12",
     "next": "14.0.3",
     "react": "^18",
