UPDATE: 테마 및 글자크기 옵션 추가

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material/web": "^1.0.1",
     "@reacticons/ionicons": "^7.1.0",
     "@supabase/supabase-js": "^2.39.1",
+    "babel-plugin-styled-components": "^2.1.4",
     "hls.js": "^1.4.12",
     "next": "14.0.3",
     "react": "^18",
